--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,6 @@
 rootProject.name = 'BrewRepoAndroid'
 
 include ':app'
+
+include ':ReactNativeBarcodescanner', ':app'
+project(':ReactNativeBarcodescanner').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-barcodescanner/android')
